force-app/main/default/objects/Monster_Club__c/Monster_Club__c.object-meta.xml
<CustomObject>
    <label>Monster Club</label>
    <nameField>
        <label>Monster Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monsters Club</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>