force-app/main/default/objects/Monster_Club__c/fields/Activity_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Activity_End_Datetime__c</fullName>
    <description>Tentative end time for the club activity</description>
    <inlineHelpText>Tentative end time for the club activity</inlineHelpText>
    <label>Activity End Datetime</label>
    <type>DateTime</type>
</CustomField>