force-app/main/default/objects/Monster_Club__c/fields/Activity_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Activity_Start_Datetime__c</fullName>
    <description>Tentative sate time when the activity will start</description>
    <inlineHelpText>Tentative sate time when the activity will start</inlineHelpText>
    <label>Activity Start Datetime</label>
    <type>DateTime</type>
</CustomField>