force-app/main/default/objects/Monster_Club__c/fields/Club_Activity__c.field-meta.xml
<CustomField>
    <fullName>Club_Activity__c</fullName>
    <description>Club activity types</description>
    <inlineHelpText>Club activity types</inlineHelpText>
    <label>Club Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stomp around the house</fullName>
            </value>
            <value>
                <fullName>Jumping on the Bed</fullName>
            </value>
            <value>
                <fullName>Shuffle Songs</fullName>
            </value>
            <value>
                <fullName>Slimy Eyes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>