force-app/main/default/objects/Monster_Club__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated to a club</description>
    <inlineHelpText>Contact associated to a club</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monsters Club</relationshipLabel>
    <relationshipName>Monsters_Club</relationshipName>
    <type>Lookup</type>
</CustomField>